--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -1,19 +1,25 @@
 {% extends "base.html" %}
 {% load static %}
 
+{# ------------------------- TITLE BLOCK ------------------------- #}
 {% block title %}
     <title>Home - Ecolution</title>
 {% endblock %}
 
+{# ------------------------- MAIN CONTENT BLOCK ------------------------- #}
 {% block main %}
+    {# ------------------------- PET DISPLAY SECTION ------------------------- #}
     <section class="pet">
         <div class="flex_v flex_center">
             <div class="image_wrapper">
+                {# If a pet exists, display its image and accessory (hat) if available #}
                 {% if pet %}
                     <img src="{{ pet.computed_image_url }}" alt="{{ pet.pet_type }} pet">
+                    {# If the pet has a hat accessory, overlay it on the pet image #}
                     {% if hat %}
                         <img src="{% static hat.image_path %}" class="hat {{ pet.pet_type }} {{ pet.size }}" alt="Hat">
                     {% endif %}
+                {# If no pet is provided, show a default pet image #}
                 {% else %}
                     <img src="{% static 'images/pets/mushroom/mushroom_large.gif' %}" alt="Default Pet">
                 {% endif %}
@@ -21,56 +27,68 @@
         </div>
     </section>
 
+    {# ------------------------- PET OPTIONS SECTION ------------------------- #}
     <section class="cycle_pet_section flex_h flex_center">
+        {# If the user owns more than one pet, display a "Cycle Pet" button #}
         {% if request.user.pet_set.count > 1 %}
-        <button class="button box_shadow text_light button_alt"
-                style="margin-right: 1rem;"
-                onclick="window.location.href='{% url 'cycle_pet' %}'">
-            Cycle Pet
-        </button>
+            <button class="button box_shadow text_light button_alt"
+                    style="margin-right: 1rem;"
+                    onclick="window.location.href='{% url 'cycle_pet' %}'">
+                Cycle Pet
+            </button>
         {% endif %}
-
+        {# Button to navigate to the accessory selection page #}
         <button class="button box_shadow text_light button_alt"
                 onclick="window.location.href='{% url 'select_accessory' %}'">
             Select Accessories
         </button>
     </section>
 
+    {# ------------------------- PET STATUS BAR SECTION ------------------------- #}
     <section class="status_bar flex_h flex_center text_light">
         <div class="pet_status flex_v margin_sml flex_v_fill">
-            <div class="pet_info_bar flex_h" style="justify-content: space-between;"> <!-- this displays the pets name and level -->
+            {# Displays pet's name and level side-by-side #}
+            <div class="pet_info_bar flex_h" style="justify-content: space-between;">
                 <p>Pet Name: {{ pet_name }}</p>
                 <p>Level: {{ level }}</p>
             </div>
+            {# XP Bar container with a visual progress indicator #}
             <div class="xp_bar box_shadow">
-                <div class="xp_bar_progress" style="width: {{ pet_exp }}%;"></div> <!-- this is a bar with the amount of xp that the pet has -->
+                <div class="xp_bar_progress" style="width: {{ pet_exp }}%;"></div>
+                {# The inner div's width reflects the pet's XP percentage #}
             </div>
             <div class="flex_h">
-                <p class="xp_bar_label" id="xp_bar_xp_current">{{ pet_exp }}XP</p> <!-- this is the amount of xp the pet currently has -->
-                <p class="xp_bar_label" id="xp_bar_xp_to_next_level">100XP</p> <!-- this is the amount the pet needs to reach the next level it should always be set to 100 -->
+                {# Displays current XP and the XP needed to level up (set to 100XP) #}
+                <p class="xp_bar_label" id="xp_bar_xp_current">{{ pet_exp }}XP</p>
+                <p class="xp_bar_label" id="xp_bar_xp_to_next_level">100XP</p>
             </div>
         </div>
     </section>
+
+    {# ------------------------- CURRENT TASKS SECTION ------------------------- #}
     <section class="current_tasks">
+        {# Heading and description for the tasks section #}
         <section class="heading flex_h">
             <div class="flex_v">
                 <h2 class="text_light">Current Tasks</h2>
                 <p class="text_light">Select a task to view or edit details</p>
             </div>
+            {# Button to view all tasks on a separate page #}
             <button class="button box_shadow text_light" type="button" onclick="window.location.href='{% url 'tasks' %}'">View All</button>
         </section>
+        {# Loop through each user task and include the task card partial template #}
         {% for user_task in user_tasks %}
             {% include 'partials/task_card.html' with user_task=user_task %}
         {% empty %}
-        <section class="card box_shadow text_light">
-            <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
-                <p>You don't have any tasks, </p>
-                <a href="{% url 'tasks' %}">lets add one!</a>
-                <!-- <button class="button_alt text_light" type="button" onclick="window.location.href='{% url 'tasks' %}'">lets add one!</button> -->
-            </div>
-        </section>
-        
-            
+            {# If no tasks are available, display a message and a link to add one #}
+            <section class="card box_shadow text_light">
+                <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
+                    <p>You don't have any tasks, </p>
+                    <a href="{% url 'tasks' %}">lets add one!</a>
+                    {# Alternative button (commented out) for adding tasks #}
+                    <!-- <button class="button_alt text_light" type="button" onclick="window.location.href='{% url 'tasks' %}'">lets add one!</button> -->
+                </div>
+            </section>
         {% endfor %}
     </section>
 {% endblock %}
